# bellium

./: CMakeLists.txt  LICENSE  README.md
src/: bellium_bindings.cpp  functions.cpp  functions.hpp  mlp.cpp  mlp.hpp  models.cpp  models.hpp  neural_network.hpp
